add produce about resume

--- a/details/color_haiyu01.html
+++ b/details/color_haiyu01.html
@@ -75,8 +75,8 @@
     <div class="main cleanfix">
     	<div class="detascon fl">
         	<div class="clearfix">
-            	<p class="detasword1 fl">彩铅海芋练习 · 原创</p>
-            	<p class="detasword2 fr">2015-6-10 23:10</p>
+            	<p class="detasword1 fl">彩铅海芋练习 · 临摹</p>
+            	<p class="detasword2 fr">2017-12-10 23:10</p>
             </div>
             <div class="detasword3">
             	好喜欢彩铅的明亮与细腻，怎样才能画好？求教！！！
